<resources>
    <string name="app_name">Kalkulator Sederhana</string>
    <string name="kalkulator_sederhana">Kalkulator Sederhana</string>
    <string name="masukkan_angka_ke_1">Masukkan Angka Ke-1</string>
    <string name="masukkan_angka_ke_2">Masukkan Angka Ke-2</string>
    <string name="tambah">Tambah</string>
    <string name="kurang">Kurang</string>
    <string name="kali">Kali</string>
    <string name="bagi">Bagi</string>
    <string name="hasil">Hasil</string>
    <string name="move_browser">Pindah Browser</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="berhasil_pindah_activity">Berhasil pindah activity</string>
    <string name="pindah_browser">Pindah Browser</string>
</resources>